--- a/html/about.html
+++ b/html/about.html
@@ -72,9 +72,7 @@
             </div>
         </div>
     </footer>
-
-    <script src="/js/about.js"></script>
-    <script src="/js/menu.js"></script>
+    <script src="/Proyecto3/js/menu.js"></script>
 </body>
 
 </html>
