--- a/html/instrucciones.html
+++ b/html/instrucciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instrucciones de la receta</title>
-    <link rel="stylesheet" href="/CSS/instrucciones.css">
+    <link rel="stylesheet" href="/Proyecto3/css/instrucciones.css">
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
     <!-- Encabezado principal -->
     <header id="main-header" class="header">
         <div class="container">
-            <img src="/assets/img/logo.png" alt="Logo" class="header-logo">
+            <img src="/Proyecto3/assets/logo.png" alt="Logo" class="header-logo">
             <h1 class="header-title">Instrucciones NutriDespensa</h1>
         </div>
     </header>
@@ -46,8 +46,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/js/instrucciones.js"></script>
-    <script src="/js/menu.js"></script>
+    <script src="/Proyecto3/js/instrucciones.js"></script>
+    <script src="/Proyecto3/js/menu.js"></script>
 
 </body>
 </html>
